@@ -1,6 +1,5 @@
 # Graphics
 DEFAULT_FULLSCREEN = True
-DEFAULT_BORDERLESS = False
 DEFAULT_VSYNC = True
 DEFAULT_SHOW_FPS = False
 DEFAULT_FILMGRAIN = 1.0
