@@ -6,14 +6,14 @@ import os
 import jsonpickle
 
 from constants.audio import DEFAULT_AUDIO_BACKEND
-from constants.settings import DEFAULT_VSYNC, DEFAULT_FULLSCREEN, DEFAULT_BORDERLESS, DEFAULT_SHOW_FPS, \
+from constants.settings import DEFAULT_VSYNC, DEFAULT_FULLSCREEN, DEFAULT_SHOW_FPS, \
     DEFAULT_FILMGRAIN, DEFAULT_WEATHER, DEFAULT_COLOR_TINT, DEFAULT_QUALITY, DEFAULT_MUSIC_VOLUME, DEFAULT_SOUND_VOLUME, \
     DEFAULT_ATMO_VOLUME, DEFAULT_MUTED, DEFAULT_FIRST_START, DEFAULT_VIBRATION, DEFAULT_ANTIALIASING, QualityPreset, \
     DEFAULT_VIDEOS, DEFAULT_MASTER_VOLUME
 from utils.media.audio import normalize_volume
 from utils.path import get_settings_path
 
-SETTINGS_STATE_VERSION = 22
+SETTINGS_STATE_VERSION = 23
 
 
 class SettingsState:
@@ -25,7 +25,6 @@ class SettingsState:
         # Video
         self.screen_resolution = [1280, 720]
         self.fullscreen = DEFAULT_FULLSCREEN
-        self.borderless = DEFAULT_BORDERLESS
         self.vsync = DEFAULT_VSYNC
         self.show_fps = DEFAULT_SHOW_FPS
 
