@@ -50,13 +50,6 @@ class StartUp:
         )
 
         parser.add_argument(
-            '--borderless',
-            default=False,
-            action='store_true',
-            help='Borderless window'
-        )
-
-        parser.add_argument(
             '--width',
             type=int,
             default=SCREEN_WIDTH,
@@ -226,7 +219,6 @@ class StartUp:
             args.width,
             args.height,
             vsync=not args.no_vsync,
-            borderless=args.borderless,
             antialiasing=settings.antialiasing > 0,
             samples=settings.antialiasing
         )
